--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     .instruction {
       background:rgba(255,255,255,0.05);
       border:2px solid #00d1ff; border-radius:16px;
-      padding:28px; max-width:360px; margin-bottom:30px;
+      padding:28px; max-width:360px; margin-bottom:20px;
       box-shadow:0 0 20px rgba(0,209,255,0.4);
       animation:glow 3s ease-in-out infinite alternate;
     }
@@ -80,8 +80,8 @@
       from{box-shadow:0 0 10px rgba(0,209,255,0.2);}
       to  {box-shadow:0 0 30px rgba(0,209,255,0.8);}
     }
-    .instruction p { font-size:18px; line-height:1.4; margin:12px 0; }
-    .instruction p b { color:#00d1ff; font-size:20px; }
+    .instruction p { font-size:18px; line-height:1.4; margin:12px 0;}
+    .instruction p b { color:#00d1ff; font-size:20px;}
 
     /* ===== glass-кнопка ===== */
     .btn {
@@ -93,6 +93,7 @@
       transition:transform .3s,box-shadow .3s;
       animation:pulse 2s ease-out infinite;
       position:relative; z-index:2;
+      margin-bottom:16px;
     }
     .btn:hover {
       transform:scale(1.05);
@@ -104,9 +105,19 @@
       100%{box-shadow:0 0 10px rgba(0,209,255,0.4);}
     }
 
+    /* ===== счётчик переходов ===== */
+    .counter {
+      background:rgba(255,255,255,0.05);
+      border:2px solid #00d1ff; border-radius:12px;
+      padding:12px 20px; font-size:16px;
+      box-shadow:0 0 10px rgba(0,209,255,0.3);
+      animation:glow 3s ease-in-out infinite alternate;
+      margin-bottom:20px;
+    }
+
     /* ===== секретная надпись ===== */
     .secret {
-      margin-top:30px; font-size:16px; color:#ffd700;
+      margin-top:20px; font-size:16px; color:#ffd700;
       opacity:0; transition:opacity 1s;
     }
     .secret.show { opacity:1; }
@@ -124,15 +135,14 @@
 </head>
 <body>
 
-  <!-- начальная flash -->
+  <!-- вспышки -->
   <div class="flash"></div>
-  <!-- warp flash -->
   <div class="warpFlash" id="warpFlash"></div>
 
   <!-- звёздный фон -->
   <div id="particles"></div>
 
-  <!-- контент -->
+  <!-- основной UI -->
   <div class="container tilt" id="container">
     <div class="bot">🤖</div>
 
@@ -144,12 +154,17 @@
       <p>• И только потом нажми кнопку</p>
     </div>
 
+    <!-- кнопка и счётчик -->
     <a href="https://t.me/astropulsereal_bot" class="btn" id="goBtn">Перейти в бот</a>
-    <div class="secret" id="secret">Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.</div>
+    <div class="counter" id="counter">574 пользователей перешло в бот</div>
+
+    <div class="secret" id="secret">
+      Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.
+    </div>
   </div>
 
   <script>
-    // 1) particles.js: сеть звёзд
+    // === particles.js: звёздный фон ===
     particlesJS('particles', {
       particles: {
         number:{value:200,density:{enable:true,value_area:800}},
@@ -164,34 +179,57 @@
       retina_detect:true
     });
 
-    // 2) при загрузке: показываем секретную надпись через 7 сек
-    window.addEventListener('load',()=>{
-      setTimeout(()=>{
-        document.getElementById('secret').classList.add('show');
-      },7000);
+    // === счётчик через CountAPI ===
+    const counterEl = document.getElementById('counter');
+    const namespace = 'astropulse';   // можно заменить на свой
+    const key = 'bot-clicks';         // можно заменить на свой
+    const urlGet = `https://api.countapi.xyz/get/${namespace}/${key}`;
+    const urlHit = `https://api.countapi.xyz/hit/${namespace}/${key}`;
+
+    // получаем текущее значение и показываем
+    fetch(urlGet)
+      .then(res=>res.json())
+      .then(data=>{
+        if(data.value !== undefined) {
+          counterEl.textContent = `${data.value} пользователей перешло в бот`;
+        }
+      });
+
+    // показываем секрет через 7 сек
+    window.addEventListener('load', ()=>{
+      setTimeout(()=> counterEl && null, 0);
+      setTimeout(()=> document.getElementById('secret').classList.add('show'), 7000);
     });
 
-    // 3) Warp + редирект
-    document.getElementById('goBtn').addEventListener('click',e=>{
+    // === Warp + редирект + увеличение счётчика ===
+    document.getElementById('goBtn').addEventListener('click', e=>{
       e.preventDefault();
-      // flash
-      document.getElementById('warpFlash').style.display='block';
-      // ускоряем фон
-      document.getElementById('particles').style.animationDuration='0.5s';
-      // запускаем warp-анимацию контейнера
+      // запустить warp-вспышку и анимацию
+      document.getElementById('warpFlash').style.display = 'block';
       document.getElementById('container').classList.add('warpCont');
-      // редирект
-      setTimeout(()=> location.href=e.target.href, 1200);
+      document.getElementById('particles').style.animationDuration = '0.5s';
+
+      // увеличить счётчик
+      fetch(urlHit)
+        .then(res=>res.json())
+        .then(data=>{
+          if(data.value !== undefined) {
+            counterEl.textContent = `${data.value} пользователей перешло в бот`;
+          }
+        });
+
+      // редирект через 1.2 сек
+      setTimeout(()=> window.location = e.target.href, 1200);
     });
 
-    // 4) 3D Tilt на движение мыши
-    const cont=document.getElementById('container');
-    window.addEventListener('mousemove',e=>{
-      const x=(e.clientX-innerWidth/2)/(innerWidth/2),
-            y=(e.clientY-innerHeight/2)/(innerHeight/2);
-      cont.style.transform=`translateY(0) rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
+    // === 3D-tilt по движению мыши ===
+    const cont = document.getElementById('container');
+    window.addEventListener('mousemove', e=>{
+      const x = (e.clientX - innerWidth/2)/(innerWidth/2);
+      const y = (e.clientY - innerHeight/2)/(innerHeight/2);
+      cont.style.transform = `rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
     });
-    window.addEventListener('mouseleave',()=>cont.style.transform='translateY(0) rotateY(0) rotateX(0)');
+    window.addEventListener('mouseleave', ()=> cont.style.transform = 'rotateY(0) rotateX(0)');
   </script>
 </body>
 </html>
