--- a/index.html
+++ b/index.html
@@ -1,133 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>AstroPulse | Переход в бота</title>
-  <!-- Космический шрифт -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet"/>
-  <!-- particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <style>
-    /* ===== Reset & базовые стили ===== */
-    *{box-sizing:border-box;margin:0;padding:0;}
-    html, body {
-      width:100%; height:100%; overflow:hidden;
-      background:#000; color:#fff;
-      font-family:'Orbitron',sans-serif;
-      perspective:1000px;
-    }
-    a{color:inherit;text-decoration:none;}
-
-    /* ===== звёздный фон-портал ===== */
-    #particles {
-      position:fixed; top:0; left:0;
-      width:200%; height:200%;
-      background: radial-gradient(circle,#fff 1px,transparent 1px);
-      background-size:50px 50px;
-      animation:moveStars 60s linear infinite;
-      z-index:1;
-    }
-    @keyframes moveStars { to { transform:translate(-50%,-50%); } }
-
-    /* ===== вспышки ===== */
-    .flash, .warpFlash {
-      position:fixed; top:0; left:0;
-      width:100%; height:100%;
-      background:#fff; display:none; z-index:3;
-    }
-    .flash { animation:flashIn 0.8s ease-out forwards; display:block; }
-    .warpFlash { animation:flashIn 0.6s ease-out forwards; }
-    @keyframes flashIn {
-      0%{opacity:1;} 80%{opacity:0;} 100%{opacity:0;display:none;}
-    }
-
-    /* ===== основной контейнер ===== */
-    .container {
-      position:relative; z-index:2;
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:center;
-      height:100%; text-align:center;
-      opacity:0; transform:translateY(20px);
-      animation:showUp 0.8s ease-out 0.8s forwards;
-      transition:transform .1s;
-    }
-    @keyframes showUp {
-      to { opacity:1; transform:translateY(0); }
-    }
-
-    /* ===== 3D tilt ===== */
-    .container { will-change:transform; }
-
-    /* ===== живой бот (Emoji) ===== */
-    .bot {
-      font-size:120px; margin-bottom:24px;
-      animation:botBreath 3s ease-in-out infinite,
-                 botBlink 5s ease-in-out infinite;
-    }
-    @keyframes botBreath {0%,100%{transform:scale(1);}50%{transform:scale(1.05);}}
-    @keyframes botBlink  {0%,20%,50%,70%,100%{opacity:1;}25%,65%{opacity:0.4;}}
-
-    /* ===== инструкция (glass + neon) ===== */
-    .instruction {
-      background:rgba(255,255,255,0.05);
-      border:2px solid #00d1ff; border-radius:16px;
-      padding:28px; max-width:360px; margin-bottom:20px;
-      box-shadow:0 0 20px rgba(0,209,255,0.4);
-      animation:glow 3s ease-in-out infinite alternate;
-    }
-    @keyframes glow {
-      from{box-shadow:0 0 10px rgba(0,209,255,0.2);}
-      to  {box-shadow:0 0 30px rgba(0,209,255,0.8);}
-    }
-    .instruction p { font-size:18px; line-height:1.4; margin:12px 0;}
-    .instruction p b { color:#00d1ff; font-size:20px;}
-
-    /* ===== glass-кнопка ===== */
-    .btn {
-      padding:14px 36px; font-size:18px; font-weight:700;
-      color:#00d1ff; background:rgba(255,255,255,0.1);
-      border:2px solid #00d1ff; border-radius:12px;
-      backdrop-filter:blur(12px);
-      box-shadow:0 0 15px rgba(0,209,255,0.5);
-      transition:transform .3s,box-shadow .3s;
-      animation:pulse 2s ease-out infinite;
-      position:relative; z-index:2;
-      margin-bottom:16px;
-    }
-    .btn:hover {
-      transform:scale(1.05);
-      box-shadow:0 0 25px rgba(0,209,255,0.8);
-    }
-    @keyframes pulse {
-      0%{box-shadow:0 0 10px rgba(0,209,255,0.4);}
-      50%{box-shadow:0 0 20px rgba(0,209,255,0.7);}
-      100%{box-shadow:0 0 10px rgba(0,209,255,0.4);}
-    }
-
-    /* ===== счётчик переходов ===== */
-    .counter {
-      background:rgba(255,255,255,0.05);
-      border:2px solid #00d1ff; border-radius:12px;
-      padding:12px 20px; font-size:16px;
-      box-shadow:0 0 10px rgba(0,209,255,0.3);
-      animation:glow 3s ease-in-out infinite alternate;
-      margin-bottom:20px;
-    }
-
-    /* ===== секретная надпись ===== */
-    .secret {
-      margin-top:20px; font-size:16px; color:#ffd700;
-      opacity:0; transition:opacity 1s;
-    }
-    .secret.show { opacity:1; }
-
-    /* ===== warp-анимация контейнера ===== */
-    .warpCont {
-      animation:warpZoom 1.2s ease-out forwards;
-    }
-    @keyframes warpZoom {
-      0%   { transform:translateY(0) scale(1) rotateX(0) rotateY(0); opacity:1; }
+0%   { transform:translateY(0) scale(1) rotateX(0) rotateY(0); opacity:1; }
       70%  { transform:translateY(-50px) scale(1.5) rotateX(10deg) rotateY(10deg); opacity:0.5; }
       100% { opacity:0; }
     }
@@ -135,14 +6,15 @@
 </head>
 <body>
 
-  <!-- вспышки -->
+  <!-- начальная flash -->
   <div class="flash"></div>
+  <!-- warp flash -->
   <div class="warpFlash" id="warpFlash"></div>
 
   <!-- звёздный фон -->
   <div id="particles"></div>
 
-  <!-- основной UI -->
+  <!-- контент -->
   <div class="container tilt" id="container">
     <div class="bot">🤖</div>
 
@@ -154,17 +26,12 @@
       <p>• И только потом нажми кнопку</p>
     </div>
 
-    <!-- кнопка и счётчик -->
     <a href="https://t.me/astropulsereal_bot" class="btn" id="goBtn">Перейти в бот</a>
-    <div class="counter" id="counter">574 пользователей перешло в бот</div>
-
-    <div class="secret" id="secret">
-      Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.
-    </div>
+    <div class="secret" id="secret">Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.</div>
   </div>
 
   <script>
-    // === particles.js: звёздный фон ===
+    // 1) particles.js: сеть звёзд
     particlesJS('particles', {
       particles: {
         number:{value:200,density:{enable:true,value_area:800}},
@@ -179,57 +46,34 @@
       retina_detect:true
     });
 
-    // === счётчик через CountAPI ===
-    const counterEl = document.getElementById('counter');
-    const namespace = 'astropulse';   // можно заменить на свой
-    const key = 'bot-clicks';         // можно заменить на свой
-    const urlGet = `https://api.countapi.xyz/get/${namespace}/${key}`;
-    const urlHit = `https://api.countapi.xyz/hit/${namespace}/${key}`;
-
-    // получаем текущее значение и показываем
-    fetch(urlGet)
-      .then(res=>res.json())
-      .then(data=>{
-        if(data.value !== undefined) {
-          counterEl.textContent = `${data.value} пользователей перешло в бот`;
-        }
-      });
-
-    // показываем секрет через 7 сек
-    window.addEventListener('load', ()=>{
-      setTimeout(()=> counterEl && null, 0);
-      setTimeout(()=> document.getElementById('secret').classList.add('show'), 7000);
+    // 2) при загрузке: показываем секретную надпись через 7 сек
+    window.addEventListener('load',()=>{
+      setTimeout(()=>{
+        document.getElementById('secret').classList.add('show');
+      },7000);
     });
 
-    // === Warp + редирект + увеличение счётчика ===
-    document.getElementById('goBtn').addEventListener('click', e=>{
+    // 3) Warp + редирект
+    document.getElementById('goBtn').addEventListener('click',e=>{
       e.preventDefault();
-      // запустить warp-вспышку и анимацию
-      document.getElementById('warpFlash').style.display = 'block';
+      // flash
+      document.getElementById('warpFlash').style.display='block';
+      // ускоряем фон
+      document.getElementById('particles').style.animationDuration='0.5s';
+      // запускаем warp-анимацию контейнера
       document.getElementById('container').classList.add('warpCont');
-      document.getElementById('particles').style.animationDuration = '0.5s';
-
-      // увеличить счётчик
-      fetch(urlHit)
-        .then(res=>res.json())
-        .then(data=>{
-          if(data.value !== undefined) {
-            counterEl.textContent = `${data.value} пользователей перешло в бот`;
-          }
-        });
-
-      // редирект через 1.2 сек
-      setTimeout(()=> window.location = e.target.href, 1200);
+      // редирект
+      setTimeout(()=> location.href=e.target.href, 1200);
     });
 
-    // === 3D-tilt по движению мыши ===
-    const cont = document.getElementById('container');
-    window.addEventListener('mousemove', e=>{
-      const x = (e.clientX - innerWidth/2)/(innerWidth/2);
-      const y = (e.clientY - innerHeight/2)/(innerHeight/2);
-      cont.style.transform = `rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
+    // 4) 3D Tilt на движение мыши
+    const cont=document.getElementById('container');
+    window.addEventListener('mousemove',e=>{
+      const x=(e.clientX-innerWidth/2)/(innerWidth/2),
+            y=(e.clientY-innerHeight/2)/(innerHeight/2);
+      cont.style.transform=`translateY(0) rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
     });
-    window.addEventListener('mouseleave', ()=> cont.style.transform = 'rotateY(0) rotateX(0)');
+    window.addEventListener('mouseleave',()=>cont.style.transform='translateY(0) rotateY(0) rotateX(0)');
   </script>
 </body>
 </html>
