--- a/index.html
+++ b/index.html
@@ -1,4 +1,128 @@
-0%   { transform:translateY(0) scale(1) rotateX(0) rotateY(0); opacity:1; }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>AstroPulse | Переход в бота</title>
+  <!-- Космический шрифт -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet"/>
+  <!-- particles.js -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <style>
+    /* ===== Reset & базовые стили ===== */
+    *{box-sizing:border-box;margin:0;padding:0;}
+    html, body {
+      width:100%; height:100%; overflow:hidden;
+      background:#000; color:#fff;
+      font-family:'Orbitron',sans-serif;
+      perspective:1000px;
+    }
+    a{color:inherit;text-decoration:none;}
+
+    /* ===== звёздный фон-портал ===== */
+    #particles {
+      position:fixed; top:0; left:0;
+      width:200%; height:200%;
+      background: radial-gradient(circle,#fff 1px,transparent 1px);
+      background-size:50px 50px;
+      animation:moveStars 60s linear infinite;
+      z-index:1;
+    }
+    @keyframes moveStars { to { transform:translate(-50%,-50%); } }
+
+    /* ===== вспышки ===== */
+    .flash, .warpFlash {
+      position:fixed; top:0; left:0;
+      width:100%; height:100%;
+      background:#fff; display:none; z-index:5;
+    }
+    .flash { animation:flashIn 0.8s ease-out forwards; display:block; }
+    .warpFlash { animation:flashIn 0.6s ease-out forwards; }
+    @keyframes flashIn {0%{opacity:1;}80%{opacity:0;}100%{opacity:0;display:none;}}
+
+    /* ===== микрогра (canvas) ===== */
+    #starGame {
+      position:fixed; top:0; left:0;
+      width:100%; height:100%;
+      z-index:2;
+      pointer-events:none;
+    }
+
+    /* ===== VR-туннель (canvas) ===== */
+    #warpTunnel {
+      position:fixed; top:0; left:0;
+      width:100%; height:100%;
+      z-index:4; display:none;
+    }
+
+    /* ===== основной контейнер ===== */
+    .container {
+      position:relative; z-index:6;
+      display:flex; flex-direction:column;
+      align-items:center; justify-content:center;
+      height:100%; text-align:center;
+      opacity:0; transform:translateY(20px);
+      animation:showUp 0.8s ease-out 0.8s forwards;
+      transition:transform .1s;
+    }
+    @keyframes showUp { to { opacity:1; transform:translateY(0); } }
+
+    /* ===== 3D tilt ===== */
+    .container { will-change:transform; }
+
+    /* ===== живой бот ===== */
+    .bot {
+      font-size:120px; margin-bottom:24px;
+      animation:botBreath 3s ease-in-out infinite, botBlink 5s ease-in-out infinite;
+    }
+    @keyframes botBreath {0%,100%{transform:scale(1);}50%{transform:scale(1.05);}}
+    @keyframes botBlink  {0%,20%,50%,70%,100%{opacity:1;}25%,65%{opacity:0.4;}}
+
+    /* ===== инструкция ===== */
+    .instruction {
+      background:rgba(255,255,255,0.05);
+      border:2px solid #00d1ff; border-radius:16px;
+      padding:28px; max-width:360px; margin-bottom:20px;
+      box-shadow:0 0 20px rgba(0,209,255,0.4);
+      animation:glow 3s ease-in-out infinite alternate;
+    }
+    @keyframes glow { from{box-shadow:0 0 10px rgba(0,209,255,0.2);} to{box-shadow:0 0 30px rgba(0,209,255,0.8);} }
+    .instruction p { font-size:18px; line-height:1.4; margin:12px 0;}
+    .instruction p b { color:#00d1ff; font-size:20px;}
+
+    /* ===== кнопка ===== */
+    .btn {
+      padding:14px 36px; font-size:18px; font-weight:700;
+      color:#00d1ff; background:rgba(255,255,255,0.1);
+      border:2px solid #00d1ff; border-radius:12px;
+      backdrop-filter:blur(12px);
+      box-shadow:0 0 15px rgba(0,209,255,0.5);
+      transition:transform .3s,box-shadow .3s;
+      animation:pulse 2s ease-out infinite;
+      position:relative; z-index:6;
+      margin-bottom:16px;
+    }
+    .btn:hover { transform:scale(1.05); box-shadow:0 0 25px rgba(0,209,255,0.8); }
+    @keyframes pulse {0%{box-shadow:0 0 10px rgba(0,209,255,0.4);}50%{box-shadow:0 0 20px rgba(0,209,255,0.7);}100%{box-shadow:0 0 10px rgba(0,209,255,0.4);}}
+
+    /* ===== бонусная ссылка ===== */
+    .bonus {
+      margin-top:12px; font-size:16px; color:#ffdd57;
+      opacity:0; transition:opacity .5s;
+    }
+    .bonus.show { opacity:1; }
+
+    /* ===== секретная надпись ===== */
+    .secret {
+      margin-top:20px; font-size:16px; color:#ffd700;
+      opacity:0; transition:opacity 1s;
+    }
+    .secret.show { opacity:1; }
+
+    /* ===== warp-анимация контейнера ===== */
+    .warpCont { animation:warpZoom 1.2s ease-out forwards; }
+    @keyframes warpZoom {
+      0%   { transform:translateY(0) scale(1) rotateX(0) rotateY(0); opacity:1; }
       70%  { transform:translateY(-50px) scale(1.5) rotateX(10deg) rotateY(10deg); opacity:0.5; }
       100% { opacity:0; }
     }
@@ -6,32 +130,36 @@
 </head>
 <body>
 
-  <!-- начальная flash -->
+  <!-- вспышки -->
   <div class="flash"></div>
-  <!-- warp flash -->
   <div class="warpFlash" id="warpFlash"></div>
 
-  <!-- звёздный фон -->
+  <!-- фон: звёзды и микро-игра -->
   <div id="particles"></div>
+  <canvas id="starGame"></canvas>
+  <canvas id="warpTunnel"></canvas>
 
-  <!-- контент -->
+  <!-- UI -->
   <div class="container tilt" id="container">
     <div class="bot">🤖</div>
-
     <div class="instruction">
       <p><b>Внимание!</b> TikTok блокирует переход в Telegram.</p>
-      <p>Чтобы всё работало:</p>
+      <p>Чтобы открыть ссылку:</p>
       <p>• Нажми <b>•••</b> (правый верхний угол)</p>
       <p>• Выбери <b>«Открыть в браузере»</b></p>
-      <p>• И только потом нажми кнопку</p>
+      <p>• Только затем нажми кнопку</p>
     </div>
-
     <a href="https://t.me/astropulsereal_bot" class="btn" id="goBtn">Перейти в бот</a>
-    <div class="secret" id="secret">Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.</div>
+    <div class="bonus" id="bonus">
+      🎁 Бонус: <a href="https://t.me/astropulsereal_bot?start=bonus" style="color:#ffdd57;">секретная команда</a>
+    </div>
+    <div class="secret" id="secret">
+      Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждали тебя.
+    </div>
   </div>
 
   <script>
-    // 1) particles.js: сеть звёзд
+    // 1) particles.js
     particlesJS('particles', {
       particles: {
         number:{value:200,density:{enable:true,value_area:800}},
@@ -39,41 +167,117 @@
         shape:{type:'circle'},
         opacity:{value:0.8,random:true},
         size:{value:4,random:true},
-        line_linked:{enable:true,distance:150,color:'#444',opacity:0.4,width:1},
         move:{enable:true,speed:1.2,direction:'center',out_mode:'out'}
       },
       interactivity:{detect_on:'canvas',events:{onhover:{enable:false},onclick:{enable:false}}},
       retina_detect:true
     });
 
-    // 2) при загрузке: показываем секретную надпись через 7 сек
-    window.addEventListener('load',()=>{
-      setTimeout(()=>{
-        document.getElementById('secret').classList.add('show');
-      },7000);
+    // 2) микрогра “поймай звезду”
+    const sg = document.getElementById('starGame');
+    const ctx = sg.getContext('2d');
+    let stars = [];
+    function resizeGame(){ sg.width = innerWidth; sg.height = innerHeight; }
+    window.addEventListener('resize',resizeGame);
+    resizeGame();
+    class FallingStar {
+      constructor(){
+        this.x = Math.random()*innerWidth;
+        this.y = -20;
+        this.size = 8 + Math.random()*8;
+        this.speed = 2 + Math.random()*3;
+      }
+      update(){ this.y += this.speed; }
+      draw(){
+        ctx.fillStyle = '#ffdd57';
+        ctx.beginPath();
+        ctx.moveTo(this.x, this.y);
+        for(let i=0;i<5;i++){
+          ctx.lineTo(this.x + this.size*Math.cos((18+72*i)*Math.PI/180),
+                     this.y + this.size*Math.sin((18+72*i)*Math.PI/180));
+          ctx.lineTo(this.x + this.size/2*Math.cos((54+72*i)*Math.PI/180),
+                     this.y + this.size/2*Math.sin((54+72*i)*Math.PI/180));
+        }
+        ctx.closePath(); ctx.fill();
+      }
+    }
+    function spawnStar(){
+      stars.push(new FallingStar());
+    }
+    setInterval(spawnStar, 800);
+    function animateGame(){
+      ctx.clearRect(0,0,sg.width,sg.height);
+      stars.forEach((s,i)=> {
+        s.update(); s.draw();
+        if(s.y>innerHeight+30) stars.splice(i,1);
+      });
+      requestAnimationFrame(animateGame);
+    }
+    animateGame();
+    sg.addEventListener('click', e=>{
+      stars.forEach((s,i)=>{
+        if(Math.hypot(e.clientX-s.x,e.clientY-s.y) < s.size){
+          stars.splice(i,1);
+          document.getElementById('bonus').classList.add('show');
+        }
+      });
     });
 
-    // 3) Warp + редирект
+    // 3) секрет
+    window.addEventListener('load',()=> setTimeout(()=>document.getElementById('secret').classList.add('show'),7000));
+
+    // 4) VR-туннель при клике
+    const wt = document.getElementById('warpTunnel');
+    const wctx = wt.getContext('2d');
+    function resizeWarp(){ wt.width=innerWidth; wt.height=innerHeight; }
+    window.addEventListener('resize',resizeWarp);
+    resizeWarp();
+    let tunnelStars=[];
+    function initTunnel(){
+      tunnelStars = Array.from({length:400},()=>({
+        x:0, y:0,
+        z:Math.random()*innerWidth,
+      }));
+    }
+    function drawTunnel(){
+      wctx.fillStyle='rgba(0,0,0,0.2)'; wctx.fillRect(0,0,wt.width,wt.height);
+      tunnelStars.forEach((p,i)=>{
+        p.z -= 8;
+        if(p.z<=0) p.z = innerWidth;
+        const sx = (p.x/ p.z) * innerWidth + innerWidth/2;
+        const sy = (p.y/ p.z) * innerHeight + innerHeight/2;
+        const rad = (1 - p.z/innerWidth)*4;
+        wctx.fillStyle = '#fff';
+        wctx.beginPath(); wctx.arc(sx,sy,rad,0,2*Math.PI); wctx.fill();
+      });
+    }
+    function animateTunnel(){
+      drawTunnel();
+      requestAnimationFrame(animateTunnel);
+    }
+    initTunnel();
+
+    // 5) Кнопка “Перейти в бот” + warp + редирект + игра
     document.getElementById('goBtn').addEventListener('click',e=>{
       e.preventDefault();
-      // flash
-      document.getElementById('warpFlash').style.display='block';
-      // ускоряем фон
+      // спрятать игру и UI
+      sg.style.display = 'none';
       document.getElementById('particles').style.animationDuration='0.5s';
-      // запускаем warp-анимацию контейнера
+      document.getElementById('warpFlash').style.display='block';
+      initTunnel(); wt.style.display='block';
+      animateTunnel();
       document.getElementById('container').classList.add('warpCont');
-      // редирект
-      setTimeout(()=> location.href=e.target.href, 1200);
+      setTimeout(()=>location.href=e.target.href, 1400);
     });
 
-    // 4) 3D Tilt на движение мыши
+    // 6) 3D-tilt
     const cont=document.getElementById('container');
     window.addEventListener('mousemove',e=>{
       const x=(e.clientX-innerWidth/2)/(innerWidth/2),
             y=(e.clientY-innerHeight/2)/(innerHeight/2);
-      cont.style.transform=`translateY(0) rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
+      cont.style.transform=`rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
     });
-    window.addEventListener('mouseleave',()=>cont.style.transform='translateY(0) rotateY(0) rotateX(0)');
+    window.addEventListener('mouseleave',()=>cont.style.transform='rotateY(0) rotateX(0)');
   </script>
 </body>
 </html>
