--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <p>• И только потом нажми кнопку</p>
     </div>
 
-    <a href="https://t.me/astropulsereal_bot" class="btn" id="goBtn">Перейти в бот</a>
+    <a href="https://t.me/astropulse_official class="btn" id="goBtn">Перейти в бот</a>
 
     <!-- поле для желания (появится через 9 сек) -->
     <div class="wish-block" id="wishBlock">
